<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/add_categoria_text_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/add_categoria"
        android:textColor="#07446F"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_categoria_input_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/add_categoria_valor_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/add_categoria_valor"
        android:textColor="#07446F"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_categoria_valor_input_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp" >

        <Button
            android:id="@+id/btn_alterar_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/btn_atualizar_categoria" />
        
        <Button
            android:id="@+id/btn_excluir_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/btn_excluir_categoria" />

        <Button
            android:id="@+id/btn_limpar_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/btn_limpar_valor_categoria" />

    </FrameLayout>

</LinearLayout>