<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/add_categoria_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/add_categoria"
        android:textColor="#07446F"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_categoria_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/add_categoria_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/add_categoria_valor"
        android:textColor="#07446F"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_categoria_valor_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:ems="10" 
        android:inputType="numberDecimal">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_cadastrar_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/btn_add_categoria" />

</LinearLayout>