<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/add_Valor_Consumo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#07446F"
        android:textColorHint="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/txt_selecione_categoria"
        android:textColor="#07446F" />

    <Spinner
        android:id="@+id/listaCategorias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:prompt="@string/spinner_categoria" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/txt_add_valor"
        android:textColor="#07446F" />

    <EditText
        android:id="@+id/addValorCons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        android:ems="10" >

        <requestFocus />
    </EditText>

	<ImageView
	    android:id="@+id/add_button" 
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/add_button_consume"
        >
	    
	</ImageView>

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"                   
                android:textColor="#07446F"                
                android:text="Valor Consumido: "
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/valor_consumido"
                android:layout_width="wrap_content"
                android:textColor="#07446F"
                android:textStyle="bold"                 
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0,0"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
        
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp" >
            
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Valor Limite: "
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#852112"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/limite_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="0,0"
                android:textStyle="bold" 
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#852112" />
        
        </TableRow>
        
        
        
    </TableLayout>
    
    

    
    
</LinearLayout>